Revision history for Bytes::Random::Secure

0.23 2012-01-30
  - Clarified the (small) magnitude of the performance issues surrounding
    random_string_from() (MODULO BIAS section of POD). (DANAJ's suggestion.)
  - Added a test for _closest_divisor().
  - Added a POD section discussing ISAAC's strengths.

0.22 2013-01-29
  - Implement suggestions from Dana Jacobsen (Unicode tests, specify minimum 
    versions for dependencies, document installation on older Perls).
  - POD correction -- Removed reference to config_seed.
  - POD: Added INSTALLATION section to address issues with older Perls.
  - POD: Clarified "CAVEATS" with discussion of Unicode support in pre-5.8.9.
  - Added t/23-string_from_unicode.t to test Unicode on Perl 5.8.9+.
  - Added a Unicode example to examples/random_from.pl.
  - Set a CONFIGURE_REQUIRES to pull in a recent ExtUtils::MakeMaker.
  - Set minimum versions on some Core modules from which we're using newer
    features, or which behaved badly in old 5.6.x-contemporary versions.
    
0.21 2013-01-24
  - All functions and methods will now throw an exception if the byte-count
    parameter is passed something that doesn't look like an integer >= 0.
  - examples/*.pl updated to demonstrate new features.
  - Remove silly check for "bag" strings longer than 2**32.
  - Eliminate a line of unreachable code from _closest_divisor().
  - Test coverage is now 100%.

0.20 2013-01-24
  - This is a major release.  Much thanks to Dana Jacobson for his ideas,
    suggestions, code reviews, and for writing Crypt::Random::Seed.
  - Major refactoring / rewrite.
  - Built an OO base layer over which the functions interface is a thin wrapper.
  - OO interface exposed publically.
  - Documented all functions. (POD)
  - removed config_seed() (never publically released).
  - Seed defaults for both interfaces are 256 bits.
  - Major enhancements to test suite. (Coverage is 99.3%)
  - ALL OF THE FOLLOWING CHANGES ARE FROM (UNRELEASED) 0.13: